[project]
name = "auth"
version = "0.0.1"
description = "\"Auth services for video convertor\""
authors = [{ name = "Rijo John", email = "rijo.john@infracloud.io" }]
readme = "README.md"
requires-python = ">=3.12,<4"
dependencies = [
    "fastapi (>=0.115.9,<0.116.0)",
    "pytest (>=8.3.4,<9.0.0)",
    "sqlalchemy (>=2.0.38,<3.0.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "alembic (>=1.14.1,<2.0.0)",
    "docker (>=7.1.0,<8.0.0)",
    "greenlet (>=3.1.1,<4.0.0)",
    "pytest-alembic (>=0.11.1,<0.12.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "httpx (>=0.28.1,<0.29.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
